--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
       height: 100%;
       font-family: 'Archivo', sans-serif;
       background: white;
-      color: white;
       overflow: hidden;
     }
     body.dark { background: #000; }
@@ -24,40 +23,49 @@
       justify-content: space-between;
     }
     .grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.5vw;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 2vw;
       padding: 2vh 2vw;
       flex: 1;
     }
+    @media (orientation: landscape), (min-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+        height: 80vh;
+      }
+    }
+
     .block {
-      flex: 1 1 calc(50% - 1.5vw);
-      aspect-ratio: 3/4;
-      border-radius: 16px;
-      font-weight: 600;
-      font-size: 1.1rem;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
+      border-radius: 16px;
+      font-weight: bold;
+      font-size: 1.2rem;
+      color: white;
       position: relative;
       overflow: hidden;
-      color: white;
-      cursor: pointer;
+      aspect-ratio: 3/4;
       background-size: cover;
       background-position: center;
-      transition: background 0.5s ease;
+      cursor: pointer;
     }
     .block-content {
       position: absolute;
       inset: 0;
-      padding: 16px;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 16px;
       text-align: center;
     }
-    .label { z-index: 1; font-size: 1.25rem; }
+    .label {
+      z-index: 1;
+    }
 
     .accionable {
       background: rgba(255,255,255,0.95);
@@ -71,21 +79,22 @@
       opacity: 0;
       animation: aparecer 0.7s forwards;
     }
-    @keyframes aparecer {
-      from { opacity: 0; transform: translateY(10px) scale(0.95); }
-      to { opacity: 1; transform: translateY(0) scale(1); }
-    }
 
     .portada-wrapper img {
       width: 90%;
       max-height: 90%;
       object-fit: contain;
-      border-radius: 14px;
+      border-radius: 12px;
       animation: float 6s ease-in-out infinite;
     }
+
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-6px); }
+    }
+    @keyframes aparecer {
+      from { opacity: 0; transform: translateY(10px) scale(0.95); }
+      to { opacity: 1; transform: translateY(0) scale(1); }
     }
 
     .footer {
@@ -95,6 +104,7 @@
       align-items: center;
       gap: 1vh;
     }
+
     .shock {
       background: linear-gradient(135deg, #ee0979, #ff6a00);
       color: white;
@@ -105,22 +115,20 @@
       font-size: 1rem;
       cursor: pointer;
       box-shadow: 0 4px 16px rgba(255, 80, 80, 0.4);
-      transition: transform 0.3s ease;
       animation: fadeIn 1.2s ease forwards;
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
+
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
     }
-    .hidden { display: none !important; }
 
-    @media (min-width: 768px) {
-      .block { aspect-ratio: auto; height: 80vh; }
-    }
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
@@ -154,7 +162,7 @@
 
   <script>
     const bloques = ["detente", "lee", "pregunta", "conecta"];
-    const textos = ["detenteText", "leeCover", "preguntaText", "conectaText"];
+    const frasesIds = ["detenteText", "leeCover", "preguntaText", "conectaText"];
 
     const libros = [
       {
@@ -168,52 +176,53 @@
     ];
 
     let libroActual = null;
-    let bloqueDelLibro = null;
-    let abierto = false;
+    let bloquePortada = null;
+    let revelado = false;
 
     const el = id => document.getElementById(id);
 
-    function inicializarLibro() {
+    function iniciarJuego() {
       libroActual = libros[Math.floor(Math.random() * libros.length)];
-      bloqueDelLibro = bloques[Math.floor(Math.random() * bloques.length)];
+      bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
+      revelado = false;
     }
 
-    function revelarTodo(bloqueClickado) {
+    function revelarPortada(bloqueId) {
       const frases = [...libroActual.frases].sort(() => Math.random() - 0.5);
-      let frasesIndex = 0;
+      let fraseIndex = 0;
 
-      bloques.forEach((bloque, index) => {
-        const label = el(bloque).querySelector(".label");
-        label.classList.add("hidden");
+      bloques.forEach((bloque, i) => {
+        el(bloque).querySelector(".label").classList.add("hidden");
 
-        if (bloque === bloqueDelLibro) {
+        if (bloque === bloquePortada) {
           el("leeImg").src = libroActual.portada;
           el("leeCover").classList.remove("hidden");
         } else {
-          const textId = textos[index];
-          el(textId).textContent = frases[frasesIndex++];
-          el(textId).classList.remove("hidden");
+          const target = frasesIds[i];
+          el(target).textContent = frases[fraseIndex++];
+          el(target).classList.remove("hidden");
         }
       });
 
-      abierto = true;
       document.body.classList.add("dark");
-      setTimeout(() => el("shockBtn").classList.remove("hidden"), 3000);
+      el("shockBtn").classList.remove("hidden");
+      revelado = true;
     }
 
     function cerrarTodo() {
-      textos.forEach(id => el(id).classList.add("hidden"));
-      document.querySelectorAll(".label").forEach(elm => elm.classList.remove("hidden"));
-      el("shockBtn").classList.add("hidden");
+      frasesIds.forEach(id => el(id).classList.add("hidden"));
+      document.querySelectorAll(".label").forEach(l => l.classList.remove("hidden"));
       document.body.classList.remove("dark");
-      abierto = false;
+      el("shockBtn").classList.add("hidden");
+      revelado = false;
     }
 
     bloques.forEach((bloque, i) => {
       el(bloque).onclick = () => {
-        if (!abierto) {
-          inicializarLibro();
-          revelarTodo(bloque);
+        if (!revelado) {
+          if (bloque === bloquePortada) {
+            revelarPortada(bloque);
+          }
         } else {
           cerrarTodo();
         }
@@ -223,6 +232,8 @@
     el("shockBtn").onclick = () => {
       el("shockBtn").textContent = "📚👏 ¡Bien leído!";
     };
+
+    iniciarJuego();
   </script>
 </body>
 </html>
