--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>TrigguiApp</title>
+  <title>TrigguiApp – Ritual</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -22,6 +22,7 @@
       flex-direction: column;
       justify-content: space-between;
     }
+
     .grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -30,6 +31,7 @@
       padding: 2vh 2vw;
       flex: 1;
     }
+
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
@@ -54,6 +56,7 @@
       background-position: center;
       cursor: pointer;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
@@ -63,6 +66,7 @@
       padding: 16px;
       text-align: center;
     }
+
     .label {
       z-index: 1;
     }
@@ -92,6 +96,7 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-6px); }
     }
+
     @keyframes aparecer {
       from { opacity: 0; transform: translateY(10px) scale(0.95); }
       to { opacity: 1; transform: translateY(0) scale(1); }
@@ -128,6 +133,15 @@
       opacity: 0.9;
     }
 
+    .final-message {
+      color: white;
+      font-size: 1rem;
+      margin-top: 10px;
+      text-align: center;
+      font-weight: 400;
+      opacity: 0.7;
+    }
+
     .hidden { display: none !important; }
   </style>
 </head>
@@ -156,6 +170,9 @@
 
     <div class="footer">
       <button class="shock hidden" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
+      <div class="final-message hidden" id="mensajeFinal">
+        Ahora… busca un libro que tengas cerca. Ábrelo en cualquier página y lee una sola frase con absoluta presencia.
+      </div>
       <img src="/trigguiletras.png" class="trigguiletras" />
     </div>
   </div>
@@ -187,7 +204,7 @@
       revelado = false;
     }
 
-    function revelarPortada(bloqueId) {
+    function revelarPortada() {
       const frases = [...libroActual.frases].sort(() => Math.random() - 0.5);
       let fraseIndex = 0;
 
@@ -214,23 +231,23 @@
       document.querySelectorAll(".label").forEach(l => l.classList.remove("hidden"));
       document.body.classList.remove("dark");
       el("shockBtn").classList.add("hidden");
+      el("mensajeFinal").classList.add("hidden");
       revelado = false;
     }
 
-    bloques.forEach((bloque, i) => {
+    bloques.forEach(bloque => {
       el(bloque).onclick = () => {
-        if (!revelado) {
-          if (bloque === bloquePortada) {
-            revelarPortada(bloque);
-          }
-        } else {
+        if (!revelado && bloque === bloquePortada) {
+          revelarPortada();
+        } else if (revelado) {
           cerrarTodo();
         }
       };
     });
 
     el("shockBtn").onclick = () => {
-      el("shockBtn").textContent = "📚👏 ¡Bien leído!";
+      el("shockBtn").classList.add("hidden");
+      el("mensajeFinal").classList.remove("hidden");
     };
 
     iniciarJuego();
